# cppcon2025_autodiff

./: .gitignore  CMakeLists.txt  README.md  run_all.sh  run_bench.sh  run_eigen.sh
ad_examples/: shared_ptr.cpp
code/: CMakeLists.txt  README.md  baseline.cpp  expr_template.cpp  lambda.cpp  lambda_eigen.cpp  lambda_eigen_special.cpp  lambda_var_eigen.cpp  mono_buffer.cpp  sct.cpp
code/ad_ex/: arena_matrix.hpp  eigen_numtraits.hpp  lambda.hpp
code/ad_ex/meta/: Eigen.hpp  eigen_plugins.hpp  is_base_pointer_convertible.hpp  is_eigen.hpp
code/benchmarks/: CMakeLists.txt  baseline.cpp  lambda.cpp  mono_buffer.cpp  sct.cpp  shared_ptr.cpp  source_code_transform.cpp
code/examples/: CMakeLists.txt  basic_ad.cpp
code/py/: main.py
code/r/: matmul_plot.R
pics/: why-not-both.avif
slides/: slide.aux  slide.fdb_latexmk  slide.fls  slide.nav  slide.snm  slide.tex  slide.vrb  slide.xdv
slides/_minted/: 17478AEC0B3F9C41BA013F2F82A7743D.highlight.minted  40FBE4598C8F1AC4F6281DDF66D5B17E.highlight.minted  534B7B4A16D3EAF1C32898E5953D2795.highlight.minted  61A3310AFACF811C7A71613E071C1977.highlight.minted  65D2EA0CF18D70F0B335FA3F1CDDB712.highlight.minted  69851CF5CB0B7148ADA0435F7C029A75.highlight.minted  72A99941A17C4B9EB5C16EEBB4110735.highlight.minted  7D4286454D73F08319D477786807634E.highlight.minted  D19B1FD5153123D9251F3D932C93F1BE.highlight.minted  E86DCDE2074AB2C8D2E2AFEEF2CF4C84.highlight.minted  F25F3AB3420819C93F3723C4D3565798.highlight.minted  FADE5E37400BD4FC874EBC0145FFF40E.highlight.minted  FD0D0BB0C3926A6E96BD09E594457122.highlight.minted  FDB5C78DDDFE134402768CF8A3F51508.highlight.minted  FE76542C7172A0528BD00219EC3F4B42.highlight.minted  _E02BD40F5C8FE41D28E4B72550A8BDD5.index.minted
slides/pygments_vscode_onedark/: pyproject.toml  vscode_onedark.py
slides/pygments_vscode_onedark/pygments_vscode_onedark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
